--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,45 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@charset "utf-8";
+
+/* body */
+body{
+  background: #f2f2f2;
+}
+footer{
+  margin-top: 40px;
+}
+
+/* navbar */
+.navbar{
+  background-color: #fff;
+}
+.navbar-header img{
+  margin-top: 5px;
+  height: 40px;
+}
+/* cover */
+.cover{
+  margin-top: -20px; /*navの下マージンを消す*/
+  margin-bottom: 20px;/*コンテンツの間隔を開ける*/
+  width: 100%;/*不明*/
+  height: 300px;
+  background: url("/images/cover-bg.jpg") center center no-repeat;/*最初のcenterがないと右だけ削ってサイズ調整、次のcenterは不明*/
+  background-size: cover;/*縦横比を保ちかつ領域を覆う最小限の大きさに画像をリサイズ&配置*/
+}
+.cover .cover-inner{
+  height: 100%; /*ようわからん*/
+  margin: auto; /*ようわからん*/
+  display: table; /*初期値は横幅マックスだけどそうじゃなくなる*/
+  
+}
+.cover .cover-inner .cover-contents {
+  display: table-cell ;/*テーブルのセル*/
+  vertical-align: middle;/*真ん中*/
+  text-align: center;/*真ん中*/
+  position: relative;/*ようわからん*/
+}
+.cover .cover-inner .cover-contents h1 {
+  margin: 0 0 20px 0;
+  color: #fff;
+  font-weight: bold;
+  letter-spacing: 0.15em;
+}
