--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@ footer{
 }
 .navbar-header img{
   margin-top: 5px;
-  height: 40px;
+  height: 40px; /* navbarのaの高さに合わせている */
 }
 /* cover */
 .cover{
