--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,7 +31,7 @@
                 <%= link_to "Wantランキング", rankings_want_path %>
               </li>
               <li role="separater" class="divider"></li>
-              <li><%= link_to "Haveランキング", "#" %></li>
+              <li><%= link_to "Haveランキング", rankings_have_path %></li>
             </ul>
           </li>
           
